--- a/index.html
+++ b/index.html
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Sergio A. Florez-Orrego</title>
-</head>
-<body>
-  <h1>Welcome!</h1>
-  <p>This is my personal research and project page.</p>
-</body>
-</html>
+<h1 id="welcome">Welcome!</h1>
+<p>This is my personal research and project page.</p>
