--- a/index.html
+++ b/index.html
@@ -1,2 +1,43 @@
-<h1 id="welcome">Welcome!</h1>
-<p>This is my personal research and project page.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Sergio A. Florez-Orrego</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <h1>Sergio A. Florez-Orrego</h1>
+      <nav>
+        <a href="#research">Research</a>
+        <a href="#teaching">Teaching</a>
+        <a href="#cv">CV</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+
+    <section class="intro">
+      <img src="formal_informal.jpeg" alt="Profile photo" class="profile-pic">
+      <div class="about">
+        <p>
+          I am a Ph.D. candidate in Finance at NYU Stern School of Business. 
+          My research explores how margining practices and collateral demand 
+          affect asset pricing and Treasury market dynamics.
+        </p>
+      </div>
+    </section>
+
+    <footer>
+      <p>© 2025 Sergio A. Florez-Orrego</p>
+    </footer>
+  </div>
+</body>
+</html>
