--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <img src="formal_informal.jpeg" alt="Profile photo" class="profile-pic">
       <div class="about">
         <p>
-          I am a Ph.D. candidate in Finance at NYU Stern School of Business. 
-          My research explores how margining practices and collateral demand 
-          affect asset pricing and Treasury market dynamics.
+          I am a third year Finance PhD student at NYU Stern.
+          My primary research interests span the areas of international macroeconomics, finance, banking and monetary policy, being particularly interested by the underpinnings of the international monetary system. I have participated in the <a href="https://www.globalcapitalallocation.com/" target="_blank"> Global Capital Allocation Project</a> since July 2021.
+          I grew up in Bogotá (Colombia) and I am currently living in New York.
         </p>
       </div>
     </section>
