First version of final webpage

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header>
       <h1>Sergio A. Florez-Orrego</h1>
       <nav>
-        <a href="#research">Research</a>
-        <a href="#cv">CV</a>
+        <a href="research.html">Research</a>
+        <a href="cv_sergioFlorez.pdf" target="_blank">CV</a>
       </nav>
     </header>
 
@@ -27,7 +27,7 @@
       <div class="about">
         <p>
           I am a third year Finance PhD student at NYU Stern.
-          My primary research interests span the areas of international macroeconomics, finance, banking and monetary policy, being particularly interested by the underpinnings of the international monetary system. I have participated in the <a href="https://www.globalcapitalallocation.com/" target="_blank"> Global Capital Allocation Project</a> since July 2021.
+          My primary research interests span the areas of financial intermediation and international macroeconomics. I have participated in the <a href="https://www.globalcapitalallocation.com/" target="_blank"> Global Capital Allocation Project</a> since July 2021.
           I grew up in Bogotá (Colombia) and I am currently living in New York.
         </p>
       </div>
