--- a/research.html
+++ b/research.html
@@ -12,60 +12,68 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <div class="container" style="max-width:1200px;">
+<body class="research-page">
+  <div class="container">
     <header>
       <h1>Research</h1>
       <nav>
         <a href="index.html">Home</a>
         <a href="research.html" class="active">Research</a>
         <!-- <a href="teaching.html">Teaching</a> -->
-        <a href="cv.pdf" target="_blank">CV</a>
+        <a href="cv_sergioFlorez.pdf" target="_blank">CV</a>
         <!-- <a href="mailto:sflorezo@stern.nyu.edu">Contact</a> -->
       </nav>
     </header>
 
-    <!-- <section>
+    <!-- Working Papers -->
+
+    <section>
       <h2>Working Papers</h2>
+
       <div class="paper">
         <h3>
-          <a href="paper1.pdf" target="_blank">Margin Requirements and Treasury Market Dynamics</a>
+          <a href="wp/demandingCollateral2025.pdf">Demanding Collateral (2025)</a>
         </h3>
-        <p><em>Job Market Paper</em></p>
+        <ul class="note-list">
+            <li>Winner of the Martin J. Gruber 2nd-year Paper Award (NYU Stern, October 2025).</li>
+        </ul>
         <p>
-          This paper studies how initial and variation margin requirements in futures markets affect
-          Treasury yields and collateral demand. Using proprietary clearing data from CME, I show that
-          margin shocks transmit to the convenience yield of short-term Treasuries.
+          This paper studies how the demand for collateral in derivatives markets influences the pricing of U.S. Treasuries. I exploit the mechanical rules set by the Chicago Mercantile Exchange (CME) governing collateral requirements for interest rate futures to study how changes in margining practices affect the aggregate need for eligible collateral— predominantly short-term Treasury securities. Combining contract-level margin data with Treasury and derivatives yields, I show that increases in required collateral lead to a significant rise in short-term Treasury convenience yields (CY). A one-billion dollar increase in collateral demand raises the 30-day OIS-T-bill spread by about 1.4 to 1.5 basis points, implying that the 2021-2024 rise in aggregate collateral use (roughly $20 billion) accounts for 28-30 basis points of additional CY. These effects represent nearly half of the historical short-term convenience yield documented in prior work. The results highlight how margining rules and clearinghouse activity propagate into Treasury pricing, underscoring the growing link between derivatives market infrastructure and the convenience value of government debt.
         </p>
-      </div> -->
+      </div>
 
       <div class="paper">
         <h3>
           <a href="wp/MoneyMatters2023.pdf">Money Matters: Global Banks, Safe Assets and Monetary Policy Autonomy (2023)</a>
         </h3>
+        <ul class="note-list">
+            <li>Co-winner Best Master Thesis in Economics and Finance, Asobancaria (Colombia).</li>
+            <li>Nominated for Best Master's in Economics at Universidad de los Andes (Bogota, Colombia).</li>
+        </ul>
         <p>
-          I propose a theory where the demand for global safe assets plays a critical role in the occurrence of various types of monetary policy spillovers. Monetary shocks of a hegemon currency issuer determine portfolio allocation of risk-averse global banks, international capital flows, and by this way (1) production, (2) aggregate risk and (3) optimal monetary policy within a non-hegemon economy. Because of general equilibrium effects, (4) non-hegemon's monetary policy responses indirectly affect global bank's incentives to hold hegemon's goverment debt --i.e. the global safe asset-- as well as hegemon's government welfare. This theory provides a novel framework that rationalizes and integrates various types of empirically documented monetary policy spillovers. Moreover, by shedding light on two-way spillovers, going both from the hegemon to the non-hegemon economy as well as the other way around, it also provides a headway on how to think potential gains of monetary policy cooperation. Understanding how the international demand for safe assets affects the international transmission of shocks is important for understanding the optimal design of monetary policy in an open economy.
+          I propose a theory where the demand for global safe assets plays a critical role in the occurrence of various types of monetary policy spillovers. Monetary shocks of a hegemon currency issuer determine portfolio allocation of risk-averse global banks, international capital flows, and by this way (1) production, (2) aggregate risk and (3) optimal monetary policy within a non-hegemon economy. Because of general equilibrium effects, (4) non-hegemon's monetary policy responses indirectly affect global bank's incentives to hold hegemon's goverment debt &mdash;i.e. the global safe asset&mdash; as well as hegemon's government welfare. This theory provides a novel framework that rationalizes and integrates various types of empirically documented monetary policy spillovers. Moreover, by shedding light on two-way spillovers, going both from the hegemon to the non-hegemon economy as well as the other way around, it also provides a headway on how to think potential gains of monetary policy cooperation. Understanding how the international demand for safe assets affects the international transmission of shocks is important for understanding the optimal design of monetary policy in an open economy.
         </p>
       </div>
     </section>
 
-    <!-- <section>
-      <h2>Published & Forthcoming Papers</h2>
+    <!-- Published Papers -->
+
+    <section>
+      <h2>Published Papers</h2>
+      
       <div class="paper">
         <h3>
-          <a href="https://doi.org/10.1016/j.jfineco.2024.01.005" target="_blank">
-            Institutional Investors and the Pricing of Safe Assets
-          </a>
-        </h3>
-        <p><em>Journal of Financial Economics, 2024</em></p>
+          <a href="publications/GlobalCapitalAllocation2024.pdf">Global Capital Allocation (2024)</a> 
+          <span class="coauthors">with Matteo Maggiori, Jesse Schreger, Ziwen Sun and Serdil Tinda</span><br>
+        </h3> 
         <p>
-          We document how non-bank financial institutions contribute to the pricing of
-          Treasury securities, emphasizing their role in demand for safety and liquidity.
+          We survey the literature on global capital allocation. We begin by reviewing the rise of cross-border investment, the shift toward portfolio investment, and the literature focusing on aggregate patterns in multilateral and bilateral positions. We then turn to the recent literature that uses micro data to document patterns in global capital allocations. We focus on the importance of the currency of denomination of assets in international portfolios and the role that tax havens and offshore financial centers play in intermediating global capital. We conclude with directions for future research in this area.
         </p>
       </div>
-    </section> -->
 
-    
+    </section>
+
+    <!-- Footer -->
     <footer>
       <p>© 2025 Sergio A. Florez-Orrego</p>
     </footer>
