--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
     </header>
 
     <section class="intro">
-      <img src="formal_informal.jpeg" alt="Profile photo" class="profile-pic">
+      <div class="photo-block">
+        <img src="formal_informal.jpeg" alt="Profile photo" class="profile-pic">
+        <div class="contact-links">
+          <div class="email-line">
+            <strong>Email:</strong> <a href="mailto:saf9215@stern.nyu.edu">saf9215@stern.nyu.edu</a>
+          </div>
+          <p><a href="https://www.linkedin.com/in/sergioflorezo" target="_blank">LinkedIn</a></p>
+          <p><a href="https://x.com/Serrrbio" target="_blank">X</a></p>
+        </div>
+      </div>
       <div class="about">
         <p>
           I am a third year Finance PhD student at NYU Stern.
