Add In the Media page

--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="front-page">
   <div class="container">
     <header>
       <h1>Sergio A. Florez-Orrego</h1>
       <nav>
         <a href="research.html">Research</a>
-        <a href="cv_sergioFlorez.pdf" target="_blank">CV</a>
+        <a href="media.html">In the Media</a>
+        <a href="cv/cv_sergioFlorez.pdf" target="_blank">CV</a>
       </nav>
     </header>
 
     <section class="intro">
       <div class="photo-block">
-        <img src="formal_informal.jpeg" alt="Profile photo" class="profile-pic">
+        <img src="images/formal_informal.jpeg" alt="Profile photo" class="profile-pic">
         <div class="contact-links">
           <div class="email-line">
             <strong>Email:</strong> <a href="mailto:saf9215@stern.nyu.edu">saf9215@stern.nyu.edu</a>
