--- a/research.html
+++ b/research.html
@@ -9,18 +9,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="research-page">
+<body class="content-page research-page">
   <div class="container">
     <header>
       <h1>Research</h1>
       <nav>
         <a href="index.html">Home</a>
-        <a href="research.html" class="active">Research</a>
-        <!-- <a href="teaching.html">Teaching</a> -->
-        <a href="cv_sergioFlorez.pdf" target="_blank">CV</a>
+         <a href="media.html">In the Media</a>
+        <a href="cv/cv_sergioFlorez.pdf" target="_blank">CV</a>
         <!-- <a href="mailto:sflorezo@stern.nyu.edu">Contact</a> -->
       </nav>
     </header>
