--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Sergio A. Florez-Orrego</title>
+
+  <link rel="icon" href="images/logo_256_circle.png" type="image/png">
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Google Fonts -->
