--- a/media.html
+++ b/media.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>In the Media  | Sergio A. Florez-Orrego</title>
+
+  <link rel="icon" href="images/logo_256_circle.png" type="image/png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Google Fonts -->
