--- a/media.html
+++ b/media.html
@@ -23,7 +23,7 @@
         <a href="index.html">Home</a>
         <a href="research.html" class="active">Research</a>
         <!-- <a href="teaching.html">Teaching</a> -->
-        <a href="cv_sergioFlorez.pdf" target="_blank">CV</a>
+        <a href="cv/cv_sergioFlorez.pdf" target="_blank">CV</a>
         <!-- <a href="mailto:sflorezo@stern.nyu.edu">Contact</a> -->
       </nav>
     </header>
